[package]
name = "cargo-apply"
version = "0.1.0"
description = "Apply (semantic) patches onto your `cargo` workspace"
authors = ["Pierre Fenoll <pierrefenoll@gmail.com>"]
repository = "https://github.com/fenollp/cargo-apply"
edition = "2021"
license = "MIT"
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
keywords = ["coccinelle", "semantic"]
